Fix the viewing and z-index for sidebar

--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -112,13 +112,14 @@ header nav .logo img {
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 70vh;
+  min-height: 100vh;
   background-color: #f8f6f4;
   position: relative;
+  z-index: -1;
 }
 .mainPicSection .mainPicContainer #MainPic {
   position: absolute;
-  max-height: 100%;
+  height: 100%;
 }
 .mainPicSection .mainPicContainer #mainSentenceContainer {
   position: absolute;
@@ -127,7 +128,7 @@ header nav .logo img {
   flex-wrap: wrap;
   text-align: center;
   align-items: center;
-  top: 50%;
+  bottom: 10%;
 }
 .mainPicSection .mainPicContainer #mainSentenceContainer h1 {
   font-family: "Magenta";
